# c-linked-list

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
data/: CTestCustom.cmake.in  Doxyfile.in  linkedlist-config.cmake.in
examples/: linkedlist-example-custom.c  linkedlist-example-int.c
include/: linkedlist-mutex.h  linkedlist.h
src/: linkedlist.c  pthread-mutex.c  win32-mutex.c
tests/: linkedlist-mutex-tests.cpp  linkedlist-tests-main.cpp  linkedlist-tests.cpp
